Update temp.css (Personal Portfolio Webpage)

--- a/Responsive Web Design/etc/temp.css
+++ b/Responsive Web Design/etc/temp.css
@@ -12,6 +12,7 @@ body {
 #navbar {
   background-color: black;
   width: 100%;
+  
   display: flex; 
   justify-content: flex-end;
   position: fixed;
@@ -22,6 +23,7 @@ body {
 
 #navbar > ul {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   margin-right: 0.5rem;
   list-style: none;
@@ -39,8 +41,64 @@ body {
   color: black;
 }
 
-main {
-  padding-top: 50px;
+#welcome-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  cursor: default;
 }
 
+#welcome-section h1 {
+  font-size: 4rem;
+  position: relative;
+  top: 25px;
+}
 
+#welcome-section p {
+  font-size: 1.5rem;
+  position: relative;
+  bottom: 15px;
+}
+
+/* hover h1 */
+#welcome-section h1 a {
+  transition: color .2s ease-out;
+}
+
+.me:hover {
+  color: red;
+}
+
+.ji:hover {
+  color: orange;
+}
+
+.ku:hover {
+  color: yellow;
+}
+
+.hi:hover {
+  color: green;
+}
+
+.bi:hover {
+  color: blue;
+}
+
+.ni:hover {
+  color: indigo;
+}
+
+.u:hover {
+  color: violet;
+}
+
+/* media */
+@media (prefers-reduced-motion: no-preference) {
+  * {
+    scroll-behavior: smooth;
+  }
+}
